# qpms

./: .gitignore  .gitmodules  BUGS.rst  CMakeLists.txt  Doxyfile  README.md  README.rst  Scattering and Shit.lyx  TODO.md  TODOs.rst  Triton-troubleshooting.md  cyquat.pxd  dipdip.bib  ewald.lyx  finite_systems.md  lattices.md  lattices2d.py  setup.py  version.cmake  worknotes.lyx
amos/: CMakeLists.txt  amos.h  camos.h  d1mach.f  zacai.f  zacon.f  zairy.f  zasyi.f  zbesh.f  zbesj.f  zbinu.f  zbknu.f  zbuni.f  zdiv.f  zkscl.f  zlog.f  zmlri.f  zrati.f  zs1s2.f  zseri.f  zsqrt.f  zunhj.f  zuni1.f  zuni2.f  zunk1.f  zunk2.f  zuoik.f  zwrsk.f
besseltransforms/: 2-1-0  2-1-1  2-1-2  2-1-3  2-1-4  2-1-5  2-1-6  2-1-7  2-2-0  2-2-1  2-2-2  2-2-3  2-2-4  2-2-5  2-2-6  2-2-7  2-3-0  2-3-1  2-3-2  2-3-3  2-3-4  2-3-5  2-3-6  2-3-7  3-1-0  3-1-1  3-1-2.REMOVED.git-id  3-2-1  3-2-2  3-3-0  3-3-1  3-3-2  3-3-3  3-3-4  3-3-5  3-3-6  3-3-7  4-1-0.REMOVED.git-id  4-1-1  4-1-1.REMOVED.git-id  (+177 more)
cmake-scripts/: FindZBESSEL.cmake  ORIGINS
dipdip-dirty/: bessels.c  bessels.h  lrhankel_recspace_dirty.c  testmain.c
faddeeva/: CMakeLists.txt
lepaper/: T-matrix paper.bib  Tmatrix.bib  arrayscat.lyx  comparison.lyx  examples.lyx  finite-cs.lyx  finite-old.lyx  finite.lyx  infinite-old.lyx  infinite.lyx  intro.lyx  macros.lyx  orbits.tex  supplementary.lyx  symmetries.lyx  symmetries.tex  tmpaper.bib
lepaper/figs/: hexsym.tex  (+4 more)
misc/: 201903_finiterectlat_AaroBEC.py  201903_finiterectlat_AaroBEC_Mie.py  201903_finiterectlat_AaroBEC_fatMie.py  TODOs.rst  dispersion-SVD.py  dispersion2D-SVD.py  dispersion_chunks.py  dispersion_hex_chunks.py  eval_TMatrices_generator_vs_scuffNotFixed_vs_scuffFixed2-spheres.ipynb  finiterectlat-constant-driving.py  finiterectlat-modes.py  finiterectlat-scatter.py  finitesqlat-scatter.py  finitesqlatzsym-scatter.py  generaldisp.py  hexdisplot.py  iht-saving.py  infiniterectlat-k0realfreqsvd.py  infiniterectlat-scatter.py  lat2d_modes.py  lat2d_realfreqsvd.py  maxnified-inv-2a.py  omega_eV2scuff.py  processWfiles.py  processWfiles_sortnames.py  rectlat_simple_modes.py  riinfo2c.py  subroutines-mstm  test_vswf.gnuplot
notes/: BesselTFnumtests.nb  BesselTFq3n0test.nb  Electrodynamics.bib  Ewald summation.bib  GF_vs_SWF.lyx  Kambe_Delta_n.lyx  SCUFF-TMATRIX-README.lyx  Scattering and Shit.lyx  Tables.bib  conventions.md  cruzan_coeffs.m  cylinderT.lyx  ewald-calculations-apr1.lyx  ewald-calculations.lyx  ewald.lyx  ewald.tex  ewald_1D_and_2D_in_3D.lyx  ewald_1D_in_3D.lyx  ewald_23_z_nonzero.lyx  hexarray-theory.bib  hexlaser-tmatrixtext.lyx  hexlattice_kpoint_projections.lyx  kambe_linton_dict.lyx  makrot.lyx  mathjax_newcommands.js  radpower.lyx  tftests.lyx
oldtests/: c_Mie_tmatrices.py  cruzan_A.m  cruzan_B.m  cytmatrices_consistence.py  ewalds.c  ewaldshift.c  ewaldshift2.c  ewaldshift3g_vargeom.c  ewaldshift_3g.c  ewaldshift_ng.c  gauntgen.m  gauntgenbare.m  gauntmaxcumsum.c  gsl_leg_phase.c  pointgrouptest.py  ss_syms_packs.c  sss1.c  sss2.c  sss3.c  sss4.c  test_qpms_p.py
qpms/: BUGS.rst  CMakeLists.txt  __init__.py  argproc.py  assert_cython_workaround.h  bessel.c  bessels.c  bessels.h  beyn.c  beyn.h  constants.py  cybspec.pxd  cybspec.pyx  cycommon.pxd  cycommon.pyx  cyewaldtest.pyx  cymaterials.pxd  cymaterials.pyx  cypolynomials.pxd  cypolynomials.pyx  cyquaternions.pxd  cyquaternions.pyx  cytmatrices.pxd  cytmatrices.pyx  cytranslations.pyx  cywaves.pyx  drudeparam_data.c  error.c  ewald.c  ewald.h  ewald_legacy.c  ewaldgammas.c  ewaldsf.c  gaunt.c  gaunt.h  gaunt_precompiled.c  groups.h  hex.py  hexpoints.py  hexpoints_c.pyx  (+78 more)
qpms/apps/: 2dlattice_ewald.c  hexlattice_ewald.c  hexlattice_ewald_altin.c  hexlattice_wrongewald_altin.c  translations_ewald.ggo
qpms/data/: gaunt18baredouble.REMOVED.git-id  gaunt18qmaxcumsum.REMOVED.git-id  gaunt30qmaxcumsum.REMOVED.git-id
qpms/tests/: gsltest.c  ray_planewaves.c  s1_constfacs.c  s1_constfacs.sage  test_planewave_decomposition.c  test_vswf_translations.c  test_vswf_translations_array.c  testcases_translations_Xu  testcases_translations_Xu.fods  translations_xutable_test.c  vswf_arr_and_single.c  vswf_errs.c  vswf_translation_test_rays.c  vswf_translation_test_rays_combocompile.sh
scuff-sphere/: Args  DelgaSphere.pp  DelgaSphere.scuffgeo  EPFile_30ring-xz  EPFile_30ring-xz.scattered.1  EPFile_30ring-xz.scattered.10  EPFile_30ring-xz.scattered.11  EPFile_30ring-xz.scattered.12  EPFile_30ring-xz.scattered.13  EPFile_30ring-xz.scattered.14  EPFile_30ring-xz.scattered.15  EPFile_30ring-xz.scattered.16  EPFile_30ring-xz.scattered.17  EPFile_30ring-xz.scattered.18  EPFile_30ring-xz.scattered.19  EPFile_30ring-xz.scattered.2  EPFile_30ring-xz.scattered.20  EPFile_30ring-xz.scattered.21  EPFile_30ring-xz.scattered.22  EPFile_30ring-xz.scattered.23  EPFile_30ring-xz.scattered.24  EPFile_30ring-xz.scattered.25  EPFile_30ring-xz.scattered.26  EPFile_30ring-xz.scattered.27  EPFile_30ring-xz.scattered.28  EPFile_30ring-xz.scattered.29  EPFile_30ring-xz.scattered.3  EPFile_30ring-xz.scattered.30  (+179 more)
tests/: Amaxcumsum.c  Bmaxcumsum.c  CMakeLists.txt  bspectransl.c  ewalds.c  ewaldshift.c  ewaldshift2.c  ewaldshift_3g.c  fixproj-notes  gauntgen.m  generate_groupcode.py  interptest.py  kidneycontour.c  modeproblem_implementations.py  quaternion_O3.c  scatsys.py  single_translations_vs_calc.c  ss_syms_packs.c  sss2.c  sss3.c  staticgroups.c  staticgroups.h  tbeyn.c  tbeyn2.c  tbeyn3.c  tbeyn_gsl.c  tbeyn_gsl2.c  test_latticegens.c  test_latticegenxyweb.c  test_lattices2d.c  test_qpms_p.py  test_scalar_ewald32.c  test_vswf_translations.c  test_vswf_translations_array.c  test_vswf_transop_consistency.py  tmatrixgens.py  transcoeff_cruzan.py
tests/bessel_precision/: besselDJcases.REMOVED.git-id  besselJcases.REMOVED.git-id  besselYcases.REMOVED.git-id  besseltest.c  compileall.sh  sagebesselgen.py
tests/gsl-int/: genvals.py  quadratures.c  values.in  values.in.REMOVED.git-id  values2.in.REMOVED.git-id
tests/gsl-intgamma/: ewald2F2.c  genvals-incgamma.py  incgamma.c  quad.mathematica
tests/lattice/: 2d_triangular_lattice.c
(+133 files in other folders)
